...
    <string name="create_contact">Create Contact</string>
    <string name="content_description_add_contact">Allows you to add this unknown address as a contact</string>
    <string name="default_current_eth_price">Current ETH Price: $760.43</string>
    <string name="default_token_balance">Balance: 100 ETH</string>
    <string name="loading_exchange_rate">Loading exchange rate…</string>
    <string name="ticker_eth">ETH</string>
    <string name="error_no_connection">No connection</string>
    <string name="error_http_communication">A network error occurred. Please try again and report the error</string>
    <string name="error_unknown">An unknown error occurred. Please try again or submit a bug report</string>
    <string name="error_network_error">A network error occurred</string>
    <string name="error_loading_exchange_rate">Unable to load exchange rate</string>
    <string name="error_no_tokens_to_send">You have no tokens to send</string>
    <string name="reload">Reload</string>
    <string name="loading_price">Loading price…</string>
    <string name="error_loading_price">Unable to load price</string>
    <string name="formatter_current_ticker_price">Current %s Price: %s</string>
    <string name="error_send_tokens_with_zero_balance">You may only send tokens that do not have a 0 balance</string>
    <string name="formatter_balance">Balance: %s</string>
    <string name="error_retrieve_eth_balance">There was an error getting your ETH balance</string>
    <string name="error_retrieve_token_balance">There was an error getting your token\'s balance</string>
    <string name="retry">retry</string>
    <string name="error_insufficient_gas">You need more ETH to send this transaction, or you can try lowering your gas settings</string>
    <string name="settings">Settings</string>
    <string name="error_insufficient_token_balance">You cannot send more tokens than you currently have</string>
    <string name="theme">Theme</string>
    <string name="title_activity_my_settings">Settings</string>
    <string name="security">Security</string>
    <string name="summary_security_screen">Manage the lock screen when opening this app or viewing your private key</string>
...
    <string name="smart_contract_settings">Smart Contract Settings</string>
    <string name="smart_contract_version">Smart Contract Version</string>
    <string name="explain_loopring_contract_version">The smart contract version you select is meant to provide a set of standards and features for trading. You should rarely (if ever) have to retrace back to old versions.</string>
    <string name="explain_ethereum_node">An Ethereum Node is your entry-point for accessing the Ethereum network.</string>
    <string name="ethereum_node">Ethereum Node</string>
    <string name="gas_settings">Gas Settings</string>
    <string name="cannot_send_more_eth_than_balance_and_gas">You cannot send more ETH than your balance minus gas</string>
    <string name="explain_application_lock">An application lock protects the assets on your device by adding a lock screen before opening this app, or when you want to view your private key.</string>
    <string name="question_send_tokens">Send Tokens?</string>
    <string name="formatter_confirm_token_send">You are about to send %s tokens, which is worth about %s. Are you sure you want to send these tokens to %s?</string>
    <string name="sending">Sending...</string>
</resources>

