...
    <string name="error_send_tokens_with_zero_balance">You may only send tokens that do not have a 0 balance</string>
    <string name="error_retrieve_eth_balance">There was an error getting your ETH balance</string>
    <string name="error_retrieve_token_balance">There was an error getting your token\'s balance</string>
    <string name="retry">retry</string>
    <string name="error_insufficient_gas">You need more ETH to send this transaction, or you can try lowering your gas settings</string>
    <string name="settings">Settings</string>
    <string name="error_send_insufficient_token_balance">You cannot send more tokens than you currently have</string>
    <string name="error_order_insufficient_token_balance">You cannot send more tokens than you currently have</string>
    <string name="theme">Theme</string>
    <string name="title_activity_my_settings">Settings</string>
    <string name="security">Security</string>
    <string name="summary_security_screen">Manage the lock screen when opening this app or viewing your private key</string>
    <string name="wallet_settings">Wallet Settings</string>
...
